# disk-avl-tree

./: .gitignore  CMakeLists.txt  README.md  avl.hpp  bst_file.hpp  main.cpp  node.hpp
inc/: avl.hpp  node.hpp  record.hpp  utils.hpp
src/: index_by_certificate.cpp  index_by_content_type.cpp  index_by_data_id.cpp  index_by_description.cpp  index_by_end_year.cpp  index_by_gross.cpp  index_by_length.cpp  index_by_rating.cpp  index_by_release_year.cpp  index_by_title.cpp  index_by_votes.cpp  main.cpp  read_bin_file.cpp
